--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -436,7 +436,7 @@ limitations under the License. -->
                                                     <ColumnDefinition Width="Auto" />
                                                 </Grid.ColumnDefinitions>
 
-                                                <CheckBox Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                                <CheckBox Grid.Column="0" IsChecked="{Binding Path=IsChecked}" HorizontalAlignment="Center" VerticalAlignment="Center" Checked="graphItem_Toggle" Unchecked="graphItem_Toggle" />
                                                 <TextBlock Grid.Column="1" Text="{Binding}" FontSize="14" Margin="4,0,0,0" />
                                                 <Button Grid.Column="2" Width="16" Height="16" Style="{StaticResource buttonStyle}" BorderThickness="0" Tag="{Binding}" Click="removeGraph_Click">
                                                     <Rectangle Fill="{StaticResource remove}" Width="10" Height="10" />
