--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -590,6 +590,7 @@ limitations under the License. -->
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
@@ -606,6 +607,13 @@ limitations under the License. -->
                         </Button>
                         <Button Grid.Row="0" Grid.Column="2" Tag="deriv" Click="InsertDoubleArgFunc_Click">
                             <Rectangle Fill="{StaticResource deriv}" Width="20" Height="20" />
+                        </Button>
+
+                        <Button Grid.Row="1" Grid.Column="0" Tag="gcd" Click="InsertDoubleArgFunc_Click">
+                            <Rectangle Fill="{StaticResource gcd}" Width="46" Height="20" />
+                        </Button>
+                        <Button Grid.Row="1" Grid.Column="1" Tag="lcm" Click="InsertDoubleArgFunc_Click">
+                            <Rectangle Fill="{StaticResource lcm}" Width="46" Height="20" />
                         </Button>
                     </Grid>
                 </Expander>
