--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -71,7 +71,7 @@ limitations under the License. -->
         <CommandBinding Command="views:MainView.DegreeCommand" Executed="DergeeButton_Execute" CanExecute="AndleButtons_CanExecute" />
         <CommandBinding Command="views:MainView.RadianCommand" Executed="RadianButton_Execute" CanExecute="AndleButtons_CanExecute" />
         <CommandBinding Command="views:MainView.GradianCommand" Executed="GradianButton_Execute" CanExecute="AndleButtons_CanExecute" />
-        
+
         <CommandBinding Command="views:MainView.BinCommand" Executed="BinCommand_Execute" CanExecute="BaseCommands_CanExecute" />
         <CommandBinding Command="views:MainView.OctCommand" Executed="OctCommand_Execute" CanExecute="BaseCommands_CanExecute" />
         <CommandBinding Command="views:MainView.DecCommand" Executed="DecCommand_Execute" CanExecute="BaseCommands_CanExecute" />
@@ -628,6 +628,9 @@ limitations under the License. -->
                         </Button>
                         <Button Grid.Row="1" Grid.Column="1" Tag="lcm" Click="InsertDoubleArgFunc_Click">
                             <Rectangle Fill="{StaticResource lcm}" Width="46" Height="20" />
+                        </Button>
+                        <Button Grid.Row="1" Grid.Column="2" Tag="fact" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource fact}" Width="40" Height="20" />
                         </Button>
                     </Grid>
                 </Expander>
