Improved status bar UI.

--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -720,11 +720,17 @@ limitations under the License. -->
         </ScrollViewer>
 
         <ribbon:StatusBar Grid.Row="3" Grid.ColumnSpan="2">
+            <StatusBar.Resources>
+                <ContextMenu x:Key="updateContextMenu">
+                    <MenuItem Header="Hide this notification." Click="hideNotification_Click" />
+                    <MenuItem Header="Don't check for updates." Click="dontCheckUpdates_Click" />
+                </ContextMenu>
+            </StatusBar.Resources>
             <ribbon:StatusBarItem HorizontalAlignment="Left" VerticalAlignment="Center">
                 <TextBlock x:Name="statusBox" />
             </ribbon:StatusBarItem>
             <Separator />
-            <ribbon:StatusBarItem HorizontalAlignment="Right" VerticalAlignment="Center">
+            <ribbon:StatusBarItem x:Name="statusUpdate" HorizontalAlignment="Right" VerticalAlignment="Center" Cursor="Hand" Visibility="Collapsed" ContextMenuService.ContextMenu="{StaticResource updateContextMenu}" MouseLeftButtonUp="UpdateText_MouseUp">
                 <TextBlock x:Name="updateText" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             </ribbon:StatusBarItem>
         </ribbon:StatusBar>
